--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
+            "source": "/api/(.*)",
+            "destination": "/api/server"
+        },
+        {
+            "source": "/v/(.*)",
+            "destination": "/api/server"
+        },
+        {
+            "source": "/",
             "destination": "/api/server"
         }
     ]
