refactor: relocate server logic to dedicated `api` directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "rewrites": [
         {
             "source": "/api/(.*)",
@@ -9,7 +10,7 @@
             "destination": "/api/server"
         },
         {
-            "source": "/",
+            "source": "/(.*)",
             "destination": "/api/server"
         }
     ]
